2/cool.output
Terminals unused in grammar

   ERROR


State 6 conflicts: 1 shift/reduce
State 11 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 65 conflicts: 9 shift/reduce
State 67 conflicts: 2 reduce/reduce
State 68 conflicts: 9 shift/reduce
State 73 conflicts: 9 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 9 shift/reduce
State 93 conflicts: 14 shift/reduce, 10 reduce/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce
State 104 conflicts: 2 shift/reduce
State 111 conflicts: 1 shift/reduce
State 119 conflicts: 2 reduce/reduce
State 126 conflicts: 1 shift/reduce
State 136 conflicts: 9 shift/reduce
State 141 conflicts: 2 reduce/reduce
State 148 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error class_list

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: feature
    8             | feature_list feature
    9             | /* empty */
   10             | error feature_list

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' TYPEID ';'

   14 formal_list: formal
   15            | formal_list ',' formal
   16            | /* empty */

   17 formal: OBJECTID ':' TYPEID

   18 expr_list_semicolon: expr ';'
   19                    | expr_list_semicolon expr ';'
   20                    | error expr_list_semicolon

   21 expr_list_comma: expr
   22                | expr_list_comma ',' expr
   23                | /* empty */

   24 expr: /* empty */
   25     | OBJECTID ASSIGN expr
   26     | expr '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   27     | expr '.' OBJECTID '(' expr_list_comma ')'
   28     | OBJECTID '(' expr_list_comma ')'
   29     | IF expr THEN expr ELSE expr FI
   30     | WHILE expr LOOP expr POOL
   31     | '{' expr_list_semicolon '}'
   32     | LET expr_let
   33     | CASE expr OF case_list ESAC
   34     | NEW TYPEID
   35     | ISVOID expr
   36     | expr_op_arithmetic
   37     | expr_op_comparison
   38     | expr_op_unary
   39     | '(' expr ')'
   40     | OBJECTID
   41     | STR_CONST
   42     | INT_CONST
   43     | BOOL_CONST

   44 expr_op_arithmetic: expr '+' expr
   45                   | expr '-' expr
   46                   | expr '*' expr
   47                   | expr '/' expr

   48 expr_op_comparison: expr '<' expr
   49                   | expr '=' expr
   50                   | expr LE expr

   51 expr_op_unary: '~' expr
   52              | NOT expr

   53 expr_let: OBJECTID ':' TYPEID IN expr
   54         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   55         | OBJECTID ':' TYPEID ',' expr_let
   56         | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let
   57         | error expr_let

   58 case_list: case ';'
   59          | case_list case ';'
   60          | /* empty */
   61          | error case_list

   62 case: OBJECTID ':' TYPEID DARROW expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 26 27 28 39
')' (41) 11 26 27 28 39
'*' (42) 46
'+' (43) 44
',' (44) 15 22 55 56
'-' (45) 45
'.' (46) 26 27
'/' (47) 47
':' (58) 11 12 13 17 53 54 55 56 62
';' (59) 5 6 11 12 13 18 19 58 59
'<' (60) 48
'=' (61) 49
'@' (64) 26
'{' (123) 5 6 11 31
'}' (125) 5 6 11 31
'~' (126) 51
error (256) 4 10 20 57 61
CLASS (258) 5 6
ELSE (259) 29
FI (260) 29
IF (261) 29
IN (262) 53 54
INHERITS (263) 6
LET (264) 32
LOOP (265) 30
POOL (266) 30
THEN (267) 29
WHILE (268) 30
CASE (269) 33
ESAC (270) 33
OF (271) 33
DARROW (272) 62
NEW (273) 34
ISVOID (274) 35
STR_CONST (275) 41
INT_CONST (276) 42
BOOL_CONST (277) 43
TYPEID (278) 5 6 11 12 13 17 26 34 53 54 55 56 62
OBJECTID (279) 11 12 13 17 25 26 27 28 40 53 54 55 56 62
ASSIGN (280) 12 25 54 56
NOT (281) 52
LE (282) 50
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4, on right: 1 3 4
class (48)
    on left: 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9 10, on right: 5 6 8 10
feature (50)
    on left: 11 12 13, on right: 7 8
formal_list (51)
    on left: 14 15 16, on right: 11 15
formal (52)
    on left: 17, on right: 14 15
expr_list_semicolon (53)
    on left: 18 19 20, on right: 19 20 31
expr_list_comma (54)
    on left: 21 22 23, on right: 22 26 27 28
expr (55)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43, on right: 11 12 18 19 21 22 25 26 27 29 30 33 35 39 44 45
    46 47 48 49 50 51 52 53 54 56 62
expr_op_arithmetic (56)
    on left: 44 45 46 47, on right: 36
expr_op_comparison (57)
    on left: 48 49 50, on right: 37
expr_op_unary (58)
    on left: 51 52, on right: 38
expr_let (59)
    on left: 53 54 55 56 57, on right: 32 55 56 57
case_list (60)
    on left: 58 59 60 61, on right: 33 59 61
case (61)
    on left: 62, on right: 58 59


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    4 class_list: error . class_list

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    class_list  go to state 6
    class       go to state 5


state 2

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    3 class_list: class_list . class
    4           | error class_list .

    CLASS  shift, and go to state 2

    CLASS     [reduce using rule 4 (class_list)]
    $default  reduce using rule 4 (class_list)

    class  go to state 9


state 7

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


state 11

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 15
    feature       go to state 16


state 12

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 17


state 13

   10 feature_list: error . feature_list

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 18
    feature       go to state 16


state 14

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID . ':' TYPEID ';'

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


state 15

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 21

    feature  go to state 22


state 16

    7 feature_list: feature .

    $default  reduce using rule 7 (feature_list)


state 17

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 23
    feature       go to state 16


state 18

    8 feature_list: feature_list . feature
   10             | error feature_list .

    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 10 (feature_list)]
    $default  reduce using rule 10 (feature_list)

    feature  go to state 22


state 19

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 24

    $default  reduce using rule 16 (formal_list)

    formal_list  go to state 25
    formal       go to state 26


state 20

   12 feature: OBJECTID ':' . TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 27


state 21

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


state 22

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


state 23

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 29

    feature  go to state 22


state 24

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


state 25

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


state 26

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


state 27

   12 feature: OBJECTID ':' TYPEID . ASSIGN expr ';'
   13        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 33
    ';'     shift, and go to state 34


state 28

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 29

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


state 30

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


state 31

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 37


state 32

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 24

    formal  go to state 38


state 33

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    $default  reduce using rule 24 (expr)

    expr                go to state 53
    expr_op_arithmetic  go to state 54
    expr_op_comparison  go to state 55
    expr_op_unary       go to state 56


state 34

   13 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 13 (feature)


state 35

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 36

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 37

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 57


state 38

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


state 39

   29 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    $default  reduce using rule 24 (expr)

    expr                go to state 58
    expr_op_arithmetic  go to state 54
    expr_op_comparison  go to state 55
    expr_op_unary       go to state 56


state 40

   32 expr: LET . expr_let

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    expr_let  go to state 61


state 41

   30 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    $default  reduce using rule 24 (expr)

    expr                go to state 62
    expr_op_arithmetic  go to state 54
    expr_op_comparison  go to state 55
    expr_op_unary       go to state 56


state 42

   33 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    $default  reduce using rule 24 (expr)

    expr                go to state 63
    expr_op_arithmetic  go to state 54
    expr_op_comparison  go to state 55
    expr_op_unary       go to state 56


state 43

   34 expr: NEW . TYPEID

    TYPEID  shift, and go to state 64


state 44

   35 expr: ISVOID . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    $default  reduce using rule 24 (expr)

    expr                go to state 65
    expr_op_arithmetic  go to state 54
    expr_op_comparison  go to state 55
    expr_op_unary       go to state 56


state 45

   41 expr: STR_CONST .

    $default  reduce using rule 41 (expr)


state 46

   42 expr: INT_CONST .

    $default  reduce using rule 42 (expr)


state 47

   43 expr: BOOL_CONST .

    $default  reduce using rule 43 (expr)


state 48

   25 expr: OBJECTID . ASSIGN expr
   28     | OBJECTID . '(' expr_list_comma ')'
   40     | OBJECTID .

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 40 (expr)


state 49

   52 expr_op_unary: NOT . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    $default  reduce using rule 24 (expr)

    expr                go to state 68
    expr_op_arithmetic  go to state 54
    expr_op_comparison  go to state 55
    expr_op_unary       go to state 56


state 50

   31 expr: '{' . expr_list_semicolon '}'

    error       shift, and go to state 69
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    LE   reduce using rule 24 (expr)
    '<'  reduce using rule 24 (expr)
    '='  reduce using rule 24 (expr)
    '+'  reduce using rule 24 (expr)
    '-'  reduce using rule 24 (expr)
    '*'  reduce using rule 24 (expr)
    '/'  reduce using rule 24 (expr)
    ';'  reduce using rule 24 (expr)
    '@'  reduce using rule 24 (expr)
    '.'  reduce using rule 24 (expr)

    expr_list_semicolon  go to state 70
    expr                 go to state 71
    expr_op_arithmetic   go to state 54
    expr_op_comparison   go to state 55
    expr_op_unary        go to state 56


state 51

   39 expr: '(' . expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    $default  reduce using rule 24 (expr)

    expr                go to state 72
    expr_op_arithmetic  go to state 54
    expr_op_comparison  go to state 55
    expr_op_unary       go to state 56


state 52

   51 expr_op_unary: '~' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    '~'         shift, and go to state 52

    $default  reduce using rule 24 (expr)

    expr                go to state 73
    expr_op_arithmetic  go to state 54
    expr_op_comparison  go to state 55
    expr_op_unary       go to state 56


state 53

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   26 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   27     | expr . '.' OBJECTID '(' expr_list_comma ')'
   44 expr_op_arithmetic: expr . '+' expr
   45                   | expr . '-' expr
   46                   | expr . '*' expr
   47                   | expr . '/' expr
   48 expr_op_comparison: expr . '<' expr
   49                   | expr . '=' expr
   50                   | expr . LE expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    ';'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83


state 54

   36 expr: expr_op_arithmetic .

    $default  reduce using rule 36 (expr)


state 55

   37 expr: expr_op_comparison .

    $default  reduce using rule 37 (expr)


state 56

   38 expr: expr_op_unary .

    $default  reduce using rule 38 (expr)


state 57

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 84


state 58

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   27     | expr . '.' OBJECTID '(' expr_list_comma ')'
   29     | IF expr . THEN expr ELSE expr FI
   44 expr_op_arithmetic: expr . '+' expr
   45                   | expr . '-' expr
   46                   | expr . '*' expr
   47                   | expr . '/' expr
   48 expr_op_comparison: expr . '<' expr
   49                   | expr . '=' expr
   50                   | expr . LE expr

    THEN  shift, and go to state 85
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


state 59

   57 expr_let: error . expr_let

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    expr_let  go to state 86


state 60

   53 expr_let: OBJECTID . ':' TYPEID IN expr
   54         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   55         | OBJECTID . ':' TYPEID ',' expr_let
   56         | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_let

    ':'  shift, and go to state 87


state 61

   32 expr: LET expr_let .

    $default  reduce using rule 32 (expr)


state 62

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   27     | expr . '.' OBJECTID '(' expr_list_comma ')'
   30     | WHILE expr . LOOP expr POOL
   44 expr_op_arithmetic: expr . '+' expr
   45                   | expr . '-' expr
   46                   | expr . '*' expr
   47                   | expr . '/' expr
   48 expr_op_comparison: expr . '<' expr
   49                   | expr . '=' expr
   50                   | expr . LE expr

    LOOP  shift, and go to state 88
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


state 63
